Minor layout update

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://arduino.esp8266.com" # the base hostname & protocol for your site
 github_username:  esp8266
-subtitle: v. 1.6.5-543-g1231234
+subtitle: "ver. 1.6.5-942-gc6e2a29, built on Jul 23, 2015"
 # Build settings
 markdown: redcarpet
 highlighter: pygments
